--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <body>
     <h1>🥐 Contact us</h1>
     <p>To contact croissant.com, please email us at
-        <a href="hello@croissant.com">hello@croissant.com</a> for more info
+        <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
     </p>
     <div>
         <a href="/">Homepage</a>
