SEO optimization added

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description"
+        content="The main ingredients of a cornetto are pastry dough, eggs, butter, water and sugar. Egg yolk is brushed on the surface of the cornetto to obtain a golden color during baking.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Best Italian Croissant</title>
+    <title>Photo of the best Italian Croissant</title>
 </head>
 
 <body>
@@ -16,9 +18,9 @@
         the north
         of Italy, the pastry is referred to as a brioche.</p>
     <div>
-        <a href="/">Homepage</a>
-        <a href="/photo.html">Photo</a>
-        <a href="/contact.html">Contact</a>
+        <a href="/" title="Home">Homepage</a>
+        <a href="/photo.html" title="Photo croissant">Photo</a>
+        <a href="/contact.html" title="Contact us">Contact</a>
     </div>
 </body>
 
